Styling for tablet on single project page, and some fixes for other sections on tablet 6.aug

--- a/assets/sass/components/_info.scss
+++ b/assets/sass/components/_info.scss
@@ -8,8 +8,6 @@
     margin-bottom: 40px;
     &-title {
       width: 50%;
-      font-size: 24px;
-      letter-spacing: 2.4px;
     }
     &-subtitle {
       font-family: $raleway;
@@ -68,22 +66,22 @@
     &__titles {
       margin-bottom: 60px;
 
-      &-title {
-        font-size: 32px;
-        letter-spacing: 3.4px;
-      }
-      &-subtitle {
-        font-size: 24px;
-        letter-spacing: 2.8px;
-      }
+      // &-title {
+      //   font-size: 32px;
+      //   letter-spacing: 3.4px;
+      // }
+      // &-subtitle {
+      //   font-size: 24px;
+      //   letter-spacing: 2.8px;
+      // }
     }
     &__container {
       padding-top: 70px;
-      &-text {
-        margin-bottom: 35px;
-        font-size: 16px;
-        line-height: 30px;
-      }
+      // &-text {
+      //   margin-bottom: 35px;
+      //   font-size: 16px;
+      //   line-height: 30px;
+      // }
       &-link {
         font-size: 22px;
       }
