--- a/assets/sass/components/_project-hero.scss
+++ b/assets/sass/components/_project-hero.scss
@@ -8,14 +8,14 @@
     display: flex;
     width: 100%;
     height: 100%;
-    height: 200px;
+    min-height: 230px;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
   }
   &__content {
     margin: 40px 0;
-    padding: 0 15%;
+    padding: 0 5%;
   }
   &__titles {
     margin-bottom: 80px;
@@ -50,6 +50,18 @@
   }
 }
 
+@include tablet() {
+  .hero {
+    &__image {
+      min-height: 600px;
+    }
+    &__content {
+      margin: 70px 0;
+      padding: 0 7%;
+    }
+  }
+}
+
 @include desktop() {
   .hero {
     &__wrapper {
@@ -58,7 +70,7 @@
     }
     &__image {
       width: 50%;
-      height: 800px;
+      min-height: 800px;
     }
     &__content {
       align-self: flex-end;
@@ -96,6 +108,14 @@
   .hero {
     &__content {
       padding: 0 13%;
+    }
+  }
+}
+
+@include desktop-xlg() {
+  .hero {
+    &__image {
+      min-height: 950px;
     }
   }
 }
